crates/am/tests/snapshots/snapshots__snapshot_share_help.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
Share your aliases with others via a pastebin service.

Available targets:

  --termbin    Post via netcat to termbin.com
               Example: am share -p git --termbin
               Output:  am export -p git -b64 | nc termbin.com 9999

  --paste-rs   Post via curl to paste.rs
               Example: am share -p git --paste-rs
               Output:  am export -p git -b64 | curl -d @- https://paste.rs/

On PowerShell, replace the pipe with:
               am export -p git -b64 | ForEach-Object { curl -d $_ https://paste.rs/ }

Run the generated command to upload. Share the returned URL.
The receiver imports with: am import <url> -b64
