crates/am/tests/snapshots/snapshots__snapshot_share_paste_rs_all.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
am export --all --b64 | curl -d @- https://paste.rs/
