crates/am/tests/snapshots/snapshots__snapshot_share_termbin_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
am export -p git --base64 | nc termbin.com 9999
