crates/am/tests/snapshots/snapshots__snapshot_sync_bash_fresh_load_project_only.snap
---
source: crates/am/tests/snapshots.rs
assertion_line: 854
expression: output
---
alias b="cargo build"
export _AM_ALIASES="b|b58de66"
unset _AM_SUBCOMMANDS
