crates/am/tests/snapshots/snapshots__snapshot_sync_fish_fresh_load_project_only.snap
---
source: crates/am/tests/snapshots.rs
assertion_line: 837
expression: output
---
functions -e b
complete -e -c b
function b
    test "$__AM_DEBUG" = 1; and set -l fish_trace 1
    cargo build $argv
end
complete -c b --wraps "cargo"
functions -e t
complete -e -c t
function t
    test "$__AM_DEBUG" = 1; and set -l fish_trace 1
    cargo test $argv
end
complete -c t --wraps "cargo"
set -gx _AM_ALIASES "b|b58de66,t|ab61de4"
set -e _AM_SUBCOMMANDS
