crates/am/tests/snapshots/snapshots__snapshot_sync_fish_incremental_one_alias_updated.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e b
functions -e b
complete -e -c b
function b
    test "$__AM_DEBUG" = 1; and set -l fish_trace 1
    cargo build --release $argv
end
complete -c b --wraps "cargo"
set -gx _AM_ALIASES "b|0dc3caa,t|ab61de4"
