crates/am/tests/snapshots/snapshots__snapshot_sync_fish_leaving_project_with_shadow_restoration.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
functions -e b
functions -e t
functions -e t
complete -e -c t
function t
    test "$__AM_DEBUG" = 1; and set -l fish_trace 1
    cargo test $argv
end
complete -c t --wraps "cargo"
set -gx _AM_ALIASES "t|ab61de4,ll|619d266"
