crates/am/tests/snapshots/snapshots__snapshot_sync_fish_transition_to_new_project.snap
---
source: crates/am/tests/snapshots.rs
assertion_line: 909
expression: output
---
functions -e old1
functions -e new1
complete -e -c new1
function new1
    echo new $argv
end
complete -c new1 --wraps "echo"
set -gx _AM_ALIASES "new1|4d1fcee"
set -e _AM_SUBCOMMANDS
